--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -43,6 +43,8 @@
             <input class="form-control" id="post_town" type="text">
             <label>Postcode</label>
             <input class="form-control" id="postcode" type="text">
+            <input id="longitude" type="text">
+            <input id="latitude" type="text">
 
           <div class="gdpr">
             <p class="small">my property insights is committed to protecting and respecting your privacy, and we’ll only use your personal
