--- a/_includes/pageHeader.html
+++ b/_includes/pageHeader.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xl-9 mx-auto">
-        <img src="{{site.github.url}}/img/logo.png" width="400">
+        <img src="{{site.github.url}}/img/logo-white.png" width="400">
         <h1 class="mb-5">Your property report awaits</h1>
       </div>
       <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
