--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,18 +1,27 @@
+---
+---
+
+$brand-green: #2da13d;
+
 body, html {
-  height: 100%; }
+  height: 100%;
+}
 
 p {
   font-family: "Maison Neue", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px;
-  font-weight: 300; }
+  font-weight: 300;
+}
 
 h1, h2, h3, h4, h5 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
-  font-style: normal; }
+  font-style: normal;
+}
 
 body {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
 
 h1,
 h2,
@@ -21,15 +30,17 @@ h4,
 h5,
 h6 {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 700; }
+  font-weight: 700;
+}
 
 header.hero {
   position: relative;
   background-color: #343a40;
-  background: url("/img/background.jpeg") no-repeat center center;
+  background: url("../img/background.jpeg") no-repeat center center;
   background-size: cover;
   padding-top: 8rem;
-  padding-bottom: 8rem; }
+  padding-bottom: 8rem;
+}
 
 header.hero .overlay {
   position: absolute;
@@ -38,62 +49,82 @@ header.hero .overlay {
   width: 100%;
   top: 0;
   left: 0;
-  opacity: 0.3; }
+  opacity: 0.3;
+}
 
 header.hero h1 {
-  font-size: 2rem; }
+  font-size: 2rem;
+}
 
 @media (min-width: 768px) {
   header.hero {
-    padding-top: 12rem;
-    padding-bottom: 12rem; }
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+  }
 
   header.hero h1 {
-    font-size: 3rem; } }
+    font-size: 3rem;
+  }
+}
+
 .showcase .showcase-text {
-  padding: 3rem; }
+  padding: 3rem;
+}
 
 .showcase .showcase-img {
   min-height: 30rem;
-  background-size: cover; }
+  background-size: cover;
+}
 
 @media (min-width: 768px) {
   .showcase .showcase-text {
-    padding: 7rem; } }
+    padding: 7rem;
+  }
+}
+
 .features-icons {
   padding-top: 7rem;
-  padding-bottom: 7rem; }
+  padding-bottom: 7rem;
+}
 
 .features-icons .features-icons-item {
-  max-width: 20rem; }
+  max-width: 20rem;
+}
 
 .features-icons .features-icons-item .features-icons-icon {
-  height: 7rem; }
+  height: 7rem;
+}
 
 .features-icons .features-icons-item .features-icons-icon i {
-  font-size: 4.5rem; }
+  font-size: 4.5rem;
+}
 
 .features-icons .features-icons-item:hover .features-icons-icon i {
-  font-size: 5rem; }
+  font-size: 5rem;
+}
 
 .testimonials {
   padding-top: 7rem;
-  padding-bottom: 7rem; }
+  padding-bottom: 7rem;
+}
 
 .testimonials .testimonial-item {
-  max-width: 18rem; }
+  max-width: 18rem;
+}
 
 .testimonials .testimonial-item img {
   max-width: 12rem;
   -webkit-box-shadow: 0px 5px 5px 0px #adb5bd;
-  box-shadow: 0px 5px 5px 0px #adb5bd; }
+  box-shadow: 0px 5px 5px 0px #adb5bd;
+}
 
 .call-to-action {
   position: relative;
   background-color: #343a40;
   background-size: cover;
   padding-top: 7rem;
-  padding-bottom: 7rem; }
+  padding-bottom: 7rem;
+}
 
 .call-to-action .overlay {
   position: absolute;
@@ -102,19 +133,31 @@ header.hero h1 {
   width: 100%;
   top: 0;
   left: 0;
-  opacity: 0.3; }
+  opacity: 0.3;
+}
 
 footer.footer {
   padding-top: 4rem;
-  padding-bottom: 4rem; }
+  padding-bottom: 4rem;
+}
 
 #addressSelectContainer, #selectedAddress {
-  display: none; }
+  display: none;
+}
 
 .btn-primary {
-  background-color: #2da13d;
-  border-color: #2da13d;
-  border-radius: 0; }
+  background-color: $brand-green;
+  border-color: $brand-green;
+  border-radius: 0;
+}
 
+.btn-primary:hover {
+  background-color: rgba(45, 161, 61,.8);
+  border-color: rgba(45, 161, 61,.8);
+}
 .features-icons .features-icons-item .features-icons-icon i {
-  color: #2da13d !important; }
+  color: $brand-green !important;
+}
+input#longitude,input#latitude {
+  display: none;
+}
