--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,7 @@
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link" href="{{site.github.url}}/news-insights">News & Insights</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
