News & Insights part2

--- a/_includes/pageHeader.html
+++ b/_includes/pageHeader.html
@@ -1,23 +1,9 @@
-<header class="hero text-white text-center">
+<header class="hero text-white text-center" id="newsHeader">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
       <div class="col-xl-9 mx-auto">
-        <img src="{{site.github.url}}/img/logo-white.png" width="400">
-        <h1 class="mb-5">Your property report awaits</h1>
-      </div>
-      <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-        <form>
-          <div class="form-row">
-            <div class="col-12 col-md-9 mb-2 mb-md-0">
-              <input id="startEmail" type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              <div class="invalid-feedback">Please enter a valid email address.</div>
-            </div>
-            <div class="col-12 col-md-3">
-              <button id="reportStart" type="button" class="btn btn-block btn-lg btn-primary">Go</button>
-            </div>
-          </div>
-        </form>
+        <h1 class="mb-2">{{page.title}}</h1>
       </div>
     </div>
   </div>
