--- a/css/styles.scss
+++ b/css/styles.scss
@@ -57,7 +57,7 @@ h6 {
 .navbar-brand span {
   color: $brand-green;
 }
-.navbar-dark .navbar-nav .nav-link:hover {
+.navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
   color: $brand-green;
   background-color: rgba(45, 161, 61,.2);
 
