--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,11 +5,11 @@
       <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
         <ul class="list-inline mb-2">
           <li class="list-inline-item">
-            <a href="#">About</a>
+            <a href="{{site.github.url}}/about">About</a>
           </li>
           <li class="list-inline-item">&sdot;</li>
           <li class="list-inline-item">
-            <a href="#">Contact</a>
+            <a href="{{site.github.url}}/contact">Contact</a>
           </li>
           <li class="list-inline-item">&sdot;</li>
           <li class="list-inline-item">
@@ -17,10 +17,10 @@
           </li>
           <li class="list-inline-item">&sdot;</li>
           <li class="list-inline-item">
-            <a href="#">Privacy Policy</a>
+            <a href="{{site.github.url}}/policies">Cookies Policy</a>
           </li>
         </ul>
-        <p class="text-muted small mb-4 mb-lg-0">&copy; {{site.title}}. All Rights Reserved.</p>
+        <p class="text-muted small mb-4 mb-lg-0">&copy; {{ site.title }} - {{ site.date }}. All Rights Reserved.</p>
       </div>
       <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
         <ul class="list-inline mb-0">
@@ -29,14 +29,9 @@
               <i class="fab fa-facebook fa-2x fa-fw"></i>
             </a>
           </li>
-          <li class="list-inline-item mr-3">
-            <a href="#">
-              <i class="fab fa-twitter-square fa-2x fa-fw"></i>
-            </a>
-          </li>
           <li class="list-inline-item">
-            <a href="#">
-              <i class="fab fa-instagram fa-2x fa-fw"></i>
+            <a href="mailto:contact@mypropertyinsights.co.uk?subject=Contact">
+              <i class="fas fa-2x fa-envelope"></i>
             </a>
           </li>
         </ul>
