--- a/_includes/homepageHeader.html
+++ b/_includes/homepageHeader.html
@@ -3,9 +3,9 @@
   <div class="container">
     <div class="row">
       <div class="col-xl-9 mx-auto">
-        <img class="img-fluid" src="{{site.github.url}}/img/logo-white.png" width="400">
-        <h1 class="mb-5">Your property report awaits</h1>
-        <h2>Get started with your valuation...</h2>
+        <h1 class="logo">myproperty<span>insights</span></h1>
+        <h2 class="mb-5">Your property report awaits</h2>
+        <h3>Get started with your valuation...</h3>
       </div>
       <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
         <form>
