--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -8,25 +8,6 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="row">
-          <div class="col">
-            <ul class="nav nav-pills nav-fills">
-              <li class="nav-item">
-                <span class="step-badge">1</span> Find your address
-              </li>
-              <li class="nav-item">
-                2
-              </li>
-              <li class="nav-item">
-                3
-              </li>
-              <li class="nav-item">
-                4
-              </li>
-            </ul>
-          </div>
-        </div>
-
         <form id="mainLeadForm">
           <div class="form-group row">
             <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
@@ -47,6 +28,7 @@
             <div class="input-group-append">
               <button class="btn btn-outline-secondary" type="button" id="find-button">Find</button>
             </div>
+            <div id="successStatus"></div>
           </div>
           <div class="form-group">
             <div id="lookup_field"></div>
@@ -66,37 +48,57 @@
             <input id="latitude" type="text">
 
             <div class="gdpr">
-              <p class="small">my property insights is committed to protecting and respecting your privacy, and we’ll only use your personal
-                information to administer your account and to provide the products and services you requested from us. From time to
-                time, we would like to contact you about our products and services, as well as other content that may be of interest
-                to you. If you consent to us contacting you for this purpose, please tick below to say how you would like us to contact you:</p>
-              <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="marketConsent">
-                <label class="custom-control-label" for="marketConsent">I would like to receive information from my propert insights.</label>
-              </div>
-              <p class="small"></p>
-              <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="serviceConsent">
-                <label class="custom-control-label" for="serviceConsent">I agree and allow my property insight to process my data to provide my with my property report.</label>
-              </div>
+              <p class="small">my property insights is committed to protecting and respecting your privacy, and we’ll only use your personal information to administer your account and to provide the products and services you requested from us. From time to time, we would
+                like to contact you about our products and services, as well as other content that may be of interest to you. If you consent to us contacting you for this purpose, please tick below to say how you would like us to contact you:</p>
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="marketConsent">
+                  <label class="form-check-label" for="marketConsent">
+                    <p class="small">I would like to receive information from my propert insights.</p>
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="serviceConsent">
+                  <label class="form-check-label" for="serviceConsent">
+                    <p class="small">I agree and allow my property insight to process my data to provide my with my property report.</p>
+                  </label>
+                </div>
             </div>
+            <button type="submit" id="mainLeadFormSubmit" class="btn btn-primary">Submit</button>
           </div>
-          <button type="submit" id="mainLeadFormSubmit" class="btn btn-primary">Submit</button>
+
         </form>
       </div>
       <pre id="successStatus"></pre>
     </div>
   </div>
 </div>
+
+<!-- Report ready -->
 <div class="modal fade" id="reportReady" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-body">
         <div class="row">
           <div class="col">
-            <h1><i class="fas fa-thumbs-up"></i></h1>
-            <p class="lead">Your report is now ready!</p>
-            <button class="btn btn-primary" id="viewReportBtn">View report</button>
+            <div class="flipper">
+              <div class="front">
+                <div id="viewwReportLoading">
+                  <p>Building your report</p>
+                  <div class="spinner">
+                    <div class="bounce1"></div>
+                    <div class="bounce2"></div>
+                    <div class="bounce3"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="back">
+                <div id="viewReportPostSpin">
+                  <h1><i class="fas fa-thumbs-up"></i></h1>
+                  <p class="lead">Your report is now ready!</p>
+                  <button class="btn btn-primary" id="viewReportBtn">View report</button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
