--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,13 +6,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="{{site.github.url}}/about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{site.github.url}}/news-insights">News & Insights</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="{{site.github.url}}/contact">Contact</a>
           </li>
         </ul>
       </div>
