site.url relative url fix, https enforcement

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,11 +5,11 @@
       <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
         <ul class="list-inline mb-2">
           <li class="list-inline-item">
-            <a href="{{site.github.url}}/about">About</a>
+            <a href="{{site.url}}/about">About</a>
           </li>
           <li class="list-inline-item">&sdot;</li>
           <li class="list-inline-item">
-            <a href="{{site.github.url}}/contact">Contact</a>
+            <a href="{{site.url}}/contact">Contact</a>
           </li>
           <li class="list-inline-item">&sdot;</li>
           <li class="list-inline-item">
@@ -17,7 +17,7 @@
           </li>
           <li class="list-inline-item">&sdot;</li>
           <li class="list-inline-item">
-            <a href="{{site.github.url}}/policies">Cookies Policy</a>
+            <a href="{{site.url}}/policies">Cookies Policy</a>
           </li>
         </ul>
         <p class="text-muted small mb-4 mb-lg-0">&copy; {{ site.title }} - {{ site.date }}. All Rights Reserved.</p>
