--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,5 +8,5 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet"/>
-<link rel="stylesheet" href="{{ site.github.url }}/css/styles.css">
+<link rel="stylesheet" href="{{ site.url }}/css/styles.css">
 <title>{{page.title}} | {{site.title}}</title>
