--- a/_includes/post-listing.html
+++ b/_includes/post-listing.html
@@ -2,7 +2,7 @@
   <div class="row">
     {% for post in site.posts %}
     <div class="col-4">
-      <a class="card" href="{{site.github.url}}{{post.url}}"">
+      <a class="card" href="{{site.url}}{{post.url}}"">
         <img class=" card-img-top" src="https://via.placeholder.com/200x100/2da13d/ffffff.png?text=example" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">{{post.title}}</h5>
