--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,18 +1,18 @@
 <nav class="mb-1 navbar navbar-expand-lg navbar-dark">
-      <a class="navbar-brand" href="{{site.github.url}}">myproperty<span>insights</span></a>
+      <a class="navbar-brand" href="{{site.url}}">myproperty<span>insights</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{{site.github.url}}/about">About</a>
+            <a class="nav-link" href="{{site.url}}/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{site.github.url}}/news-insights">News & Insights</a>
+            <a class="nav-link" href="{{site.url}}/news-insights">News & Insights</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{site.github.url}}/contact">Contact</a>
+            <a class="nav-link" href="{{site.url}}/contact">Contact</a>
           </li>
         </ul>
       </div>
