--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,3 +10,5 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet"/>
 <link rel="stylesheet" href="{{ site.url }}/css/styles.css">
 <title>{{page.title}} | {{site.title}}</title>
+<link rel="shortcut icon" href="{{ site.url }}/img/favicon.ico" type="image/x-icon">
+<link rel="icon" href="{{ site.url }}/img/favicon.ico" type="image/x-icon">
