--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-6">
+      <h2>Got a question for us?</h2>
+      <p>Feel free to get in touch with the team here at mypropertyinsights, we don't bite.</p>
+      <p>Have you got your free property valuation yet?</p>
+      <a class="btn btn-primary" href="{{ site.url }}">Start now!</a>
     </div>
     <div class="col-12 col-md-6">
       <form id="contactForm">
@@ -23,7 +27,7 @@
         <div class="form-check">
           <input class="form-check-input" type="checkbox" value="" id="contactConsent">
           <label class="form-check-label" for="contactConsent">
-            I agree
+            <p class="small">I agree and allow mypropertyinsight to process my data in order to respond to my message.</p>
           </label>
         </div>
         <button id="contactSubmit" class="btn btn-primary" type="submit">Contact</button>
