--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -89,6 +89,7 @@
                     <div class="bounce2"></div>
                     <div class="bounce3"></div>
                   </div>
+                  <p class="small">Please note: prices are based on the average selling price of all properties in your area.</p>
                 </div>
               </div>
               <div class="back">
