--- a/_includes/uspGrid.html
+++ b/_includes/uspGrid.html
@@ -7,7 +7,7 @@
             <i class="fas fa-pound-sign m-auto text-primary"></i>
           </div>
           <h3>Free</h3>
-          <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+          <p class="lead mb-0">Our service is completely free. If you decide to choose to market our property with one of our recommendations we charge the agent a small fee for the connection.</p>
         </div>
       </div>
       <div class="col-lg-6">
@@ -15,8 +15,8 @@
           <div class="features-icons-icon d-flex">
             <i class="fas fa-info m-auto text-primary"></i>
           </div>
-          <h3>Detailed Valuation</h3>
-          <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+          <h3>Instant Valuation</h3>
+          <p class="lead mb-0">Genuinely instant, unlike the majority of online valuation services we deliver your report through the web browser in less than 30 seconds.</p>
         </div>
       </div>
       <div class="col-lg-6">
@@ -24,8 +24,8 @@
           <div class="features-icons-icon d-flex">
             <i class="fas fa-bolt  m-auto text-primary"></i>
           </div>
-          <h3>Selling Tips</h3>
-          <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+          <h3>Keeping You Informed</h3>
+          <p class="lead mb-0">We assist in making an educated and informed decision not only will you receive a valuation figure, you’ll see estimated estate agent fee, average time your property may need to be on the market and different benefits each agent specializes in.</p>
         </div>
       </div>
       <div class="col-lg-6">
@@ -33,8 +33,8 @@
           <div class="features-icons-icon d-flex">
             <i class="fas fa-bolt  m-auto text-primary"></i>
           </div>
-          <h3>Home Selling Guide</h3>
-          <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+          <h3>Property Selling Tips</h3>
+          <p class="lead mb-0">With our finger on the pulse of the UK property industry, check out our news and insights blog for the latest insider advice to selling.</p>
         </div>
       </div>
     </div>
