--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
       <div class="row">
         <div>
           <div class="block">
-            <img src"{{ site.url }}/{{ page.banner_image | relative_url }}">
+            <img src"{{ site.url }}">
             <h1>{{ page.title }}</h1>
             <div class="post-info-wrapper">
               <p class="italic"><span class="bold">{{ page.date | date: "%B %-d, %Y" }}</span></p>
