--- a/_includes/dashboard-sidebar.html
+++ b/_includes/dashboard-sidebar.html
@@ -7,19 +7,20 @@
       <p id="addLine3"></p>
       <p id="town"></p>
       <p id="postcode"></p>
+      <!-- <a href="" class="btn btn-link"><i class="fas fa-envelope"></i> Share Dashboar</a> -->
     </div>
-    <ul class="nav flex-column">
+    <ul class="nav md-tabs flex-column">
       <li class="nav-item">
-        <a class="nav-link active" data-name="valuation" href="#"><i class="fas fa-pound-sign"></i> Valuation</a>
+        <a class="nav-link btn btn-block active" data-name="valuation" href="#"><i class="fas fa-pound-sign"></i> Valuation<i class="fa fa-angle-right"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" data-name="estate-agent" id="findEAgent"><i class="fas fa-search"></i> Find an Estate Agent</a>
+        <a class="nav-link btn btn-block" href="#" data-name="estate-agent" id="findEAgent"><i class="fas fa-search"></i> Find an Estate Agent<i class="fa fa-angle-right"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" data-name="calculators"><i class="fas fa-calculator"></i>  Calculators</a>
+        <a class="nav-link btn btn-block" href="#" data-name="calculators"><i class="fas fa-calculator"></i>  Calculators<i class="fa fa-angle-right"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" data-name="checklist"><i class="fas fa-pencil-alt"></i>  Checklist</a>
+        <a class="nav-link btn btn-block" href="#" data-name="checklist"><i class="fas fa-pencil-alt"></i>  Checklist<i class="fa fa-angle-right"></i></a>
       </li>
     </ul>
   </div>
