--- a/_includes/uspGrid.html
+++ b/_includes/uspGrid.html
@@ -1,42 +1,41 @@
-<section class="features-icons bg-light text-center">
-  <div class="container">
+<div class="container-fluid">
+  <section class="my-5">
+    <h2 class="h1-responsive text-center my-5">Online Property Valuation</h2>
+    <p class="lead grey-text text-center w-responsive mx-auto mb-5">With our finger on the pulse of the UK property industry, check out our news and insights blog for the latest insider advice to selling.</p>
     <div class="row">
-      <div class="col-lg-6">
-        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-          <div class="features-icons-icon d-flex">
-            <i class="fas fa-pound-sign m-auto text-primary"></i>
-          </div>
-          <h3>Free</h3>
-          <p class="lead mb-0">Our service is completely free. If you decide to choose to market our property with one of our recommendations we charge the agent a small fee for the connection.</p>
-        </div>
+      <div class="col-lg-5 text-center text-lg-left">
+        <img class="img-fluid z-depth-1" src="{{site.url}}/img/house-1.jpg" alt="Old Cottage Image">
       </div>
-      <div class="col-lg-6">
-        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-          <div class="features-icons-icon d-flex">
-            <i class="fas fa-info m-auto text-primary"></i>
+      <div class="col-lg-7">
+        <div class="row mb-3">
+          <div class="col-1">
+            <i class="fas fa-pound-sign fa-lg green-icon"></i>
           </div>
-          <h3>Instant Valuation</h3>
-          <p class="lead mb-0">Genuinely instant, unlike the majority of online valuation services we deliver your report through the web browser in less than 30 seconds.</p>
+          <div class="col-xl-10 col-md-11 col-10">
+            <h5 class="mb-3">Free</h5>
+            <p class="grey-text">Our service is completely free. If you decide to choose to market our property with one of our recommendations we charge the agent a small fee for the connection.</p>
+          </div>
         </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-          <div class="features-icons-icon d-flex">
-            <i class="fas fa-bolt  m-auto text-primary"></i>
+        <div class="row mb-3">
+          <div class="col-1">
+            <i class="fas fa-bolt fa-lg green-icon"></i>
           </div>
-          <h3>Keeping You Informed</h3>
-          <p class="lead mb-0">We assist in making an educated and informed decision not only will you receive a valuation figure, you’ll see estimated estate agent fee, average time your property may need to be on the market and different benefits each agent specializes in.</p>
+          <div class="col-xl-10 col-md-11 col-10">
+            <h5 class="mb-3">Instant Valuation</h5>
+            <p class="grey-text">Genuinely instant, unlike the majority of online valuation services we deliver your report through the web browser in less than 30 seconds.</p>
+          </div>
         </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-          <div class="features-icons-icon d-flex">
-            <i class="fas fa-bolt  m-auto text-primary"></i>
+        <div class="row">
+          <div class="col-1">
+            <i class="fas fa-info fa-lg green-icon"></i>
           </div>
-          <h3>Property Selling Tips</h3>
-          <p class="lead mb-0">With our finger on the pulse of the UK property industry, check out our news and insights blog for the latest insider advice to selling.</p>
+          <div class="col-xl-10 col-md-11 col-10">
+            <h5 class="mb-3">Keeping You Informed</h5>
+            <p class="grey-text mb-0">We assist in making an educated and informed decision not only will you receive a valuation figure, you’ll see estimated estate agent fee, average time your property may need to be on the market and different
+              benefits each agent specializes in.</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+</div>
