--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
       <h2>Got a question for us?</h2>
       <p>Feel free to get in touch with the team here at mypropertyinsights, we don't bite.</p>
       <p>Have you got your free property valuation yet?</p>
-      <a class="btn btn-primary" href="{{ site.url }}">Start now!</a>
+      <a class="btn btn-primary" href="{{ site.url }}/valuation-form">Start now!</a>
     </div>
     <div class="col-12 col-md-6">
       <form id="contactForm">
