--- a/_includes/dashboard-sidebar.html
+++ b/_includes/dashboard-sidebar.html
@@ -7,7 +7,7 @@
       <p id="addLine3"></p>
       <p id="town"></p>
       <p id="postcode"></p>
-      <!-- <a href="" class="btn btn-link"><i class="fas fa-envelope"></i> Share Dashboar</a> -->
+      <a href="" class="emailVal waves-effect"><i class="fas fa-envelope"></i> Share Dashboard</a>
     </div>
     <ul class="nav md-tabs flex-column">
       <li class="nav-item">
@@ -19,9 +19,9 @@
       <li class="nav-item">
         <a class="nav-link btn btn-block" href="#" data-name="calculators"><i class="fas fa-calculator"></i>  Calculators<i class="fa fa-angle-right"></i></a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link btn btn-block" href="#" data-name="checklist"><i class="fas fa-pencil-alt"></i>  Checklist<i class="fa fa-angle-right"></i></a>
-      </li>
+      </li> -->
     </ul>
   </div>
 </nav>
