--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,3 +13,4 @@
 <title>{{page.title}} | {{site.title}}</title>
 <link rel="shortcut icon" href="{{ site.url }}/img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="{{ site.url }}/img/favicon.ico" type="image/x-icon">
+{% include meta.html %}
