--- a/_includes/valuation-form.html
+++ b/_includes/valuation-form.html
@@ -11,7 +11,7 @@
                 <input type="text" class="form-control" id="postCodeInput" aria-label="Enter Post Code" aria-describedby="postCodeInput">
                 <label for="postCodeInput" class="">Post Code</label>
                 <div class="input-group-append">
-                  <button class="btn btn-md btn-secondary m-0 px-3" type="button" id="find-button2">Search</button>
+                  <button class="btn btn-outline-primary waves-effect m-0 px-3" type="button" id="find-button2">Search</button>
                 </div>
                 <div id="successStatus"></div>
               </div>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="md-form">
                   <label for="postcode">Postcode</label>
-                  <input class="form-control" id="postcode" type="text">
+                  <input class="form-control" id="postcode" type="text" data-validation="required" data-validation-error-msg="Please enter a Post Code">
                 </div>
                 <input id="longitude" type="text">
                 <input id="latitude" type="text">
@@ -54,41 +54,33 @@
 
               <h2>Step 2. About You</h2>
               <div class="md-form">
-                <input type="email" id="staticEmail" name="firstName" class="form-control">
+                <input type="email" id="staticEmail" name="firstName" class="form-control" data-validation="email" data-validation-error-msg="Please enter a valid email address">
                 <label for="staticEmail" class="">Email</label>
               </div>
-              <div class="invalid-tooltip"><i class="fas fa-exclamation-triangle"></i> Please enter a valid email address.</div>
 
 
               <div class="md-form mb-0">
-                <input type="text" id="firstName" name="firstName" class="form-control">
+                <input type="text" id="firstName" name="firstName" class="form-control" data-validation="required" data-validation-error-msg="Please enter your name">
                 <label for="firstName" class="">First name</label>
               </div>
 
 
               <div class="md-form mb-0">
-                <input type="text" id="lastName" name="lastName" class="form-control">
-                <label for="lastName" class="">Last email</label>
+                <input type="text" id="lastName" name="lastName" class="form-control" data-validation="required" data-validation-error-msg="Please enter your name">
+                <label for="lastName" class="">Last name</label>
               </div>
               <div class="gdpr">
-                <p class="small">my property insights is committed to protecting and respecting your privacy, and we’ll only use your personal information to administer your account and to provide the products and services you requested from us.
-                  From
-                  time to time, we would
-                  like to contact you about our products and services, as well as other content that may be of interest to you. If you consent to us contacting you for this purpose, please tick below to say how you would like us to contact you:</p>
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="" id="marketConsent">
-                  <label class="form-check-label" for="marketConsent">
-                    <p class="small">I would like to receive information from my propert insights.</p>
-                  </label>
+                <p class="small">my property insights is committed to protecting and respecting your privacy, and we’ll only use your personal information to administer your valuation and to provide the products and services you requested from us. From time to time, we would like to contact you about our products and services, as well as other content that may be of interest to you. If you consent to us contacting you for this purpose, please tick below to say how you would like us to contact you:</p>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="marketConsent" value="unchecked">
+                    <label class="custom-control-label" for="marketConsent"><p class="small">I would like to receive information from my propert insights.</p></label>
                 </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="" id="serviceConsent">
-                  <label class="form-check-label" for="serviceConsent">
-                    <p class="small">I agree and allow my property insight to process my data to provide my with my property report.</p>
-                  </label>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="serviceConsent" value="unchecked" data-validation="required">
+                    <label class="custom-control-label" for="serviceConsent"><p class="small">I agree and allow my property insight to process my data to provide my with my property report.</p></label>
                 </div>
               </div>
-              <button type="submit" id="mainLeadFormSubmit" class="btn btn-primary">Submit</button>
+              <button type="submit" id="mainLeadFormSubmit" class="btn btn-primary" disabled>Submit</button>
             </section>
           </div>
         </div>
