--- a/css/styles.scss
+++ b/css/styles.scss
@@ -183,8 +183,12 @@ footer.footer {
   display: none;
 }
 
-.btn.btn-primary {
+.btn.btn-primary,.btn.btn-primary:active,.btn.btn-primary:focus {
   background-color: $brand-green!important;
+}
+.btn.btn-outline-primary,.btn.btn-outline-primary:focus,.btn.btn-outline-primary:active {
+  border-color: $brand-green!important;
+  color: $brand-green!important;
 }
 
 .btn.btn-primary.btn-purpleBricks {
@@ -347,6 +351,7 @@ span.card-link {
 }
 #estateAgentsMap iframe{
   width: 100%;
+  height: 100%;
 }
 .onlineAgent ul {
   list-style: none;
@@ -528,4 +533,32 @@ i.green-icon {
 }
 .menuBody .nav-link {
   padding-top: 12.5px;
+}
+#lookup_field #idpc_button {
+  display: none;
+}
+.help-block.form-error {
+  background-color: rgb(185, 74, 72);
+  color: white;
+  padding: 5px;
+  border-radius: 3px;
+}
+#dashboardCalculation .custom-control.custom-radio, #dashboardCalculation .dashCardBody p {
+  text-align: left;
+}
+a.emailVal {
+  margin-top: 5px;
+  font-size: 14px;
+  padding: 5px;
+  color: black;
+}
+a.emailVal:hover {
+  background-color: #E0E0E0;
+
+}
+.fb-xfbml-parse-ignore i,.btn.btn-tw i,.btn.btn-gplus i {
+  color: black;
+}
+.post-content {
+  padding:15px;
 }
