--- a/css/styles.scss
+++ b/css/styles.scss
@@ -573,3 +573,21 @@ a.emailVal:hover {
   background-image: url('../img/background-30.png');
   height: 60vh;
 }
+span.mobMenuLabel {
+  background: rgba(70, 70, 70, 0.9);
+  border-radius: 2px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  color: #ececec;
+  display: inline-block;
+  font-weight: bold;
+  line-height: 1em;
+  width: auto;
+  max-width: 200px;
+  overflow: hidden;
+  padding: 6px 8px;
+  text-overflow: ellipsis;
+  vertical-align: middle;
+  position: absolute;
+  right: 60px;
+  margin-top: 10px;
+}
