new area explorer new area explorer

--- a/_includes/dashboard-sidebar.html
+++ b/_includes/dashboard-sidebar.html
@@ -19,6 +19,9 @@
       <li class="nav-item">
         <a class="nav-link btn btn-block" href="#" data-name="calculators"><i class="fas fa-calculator"></i>  Calculators<i class="fa fa-angle-right"></i></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link btn btn-block" href="#" data-name="area"><i class="far fa-map"></i>  Explore Area<i class="fa fa-angle-right"></i></a>
+      </li>
       <!-- <li class="nav-item">
         <a class="nav-link btn btn-block" href="#" data-name="checklist"><i class="fas fa-pencil-alt"></i>  Checklist<i class="fa fa-angle-right"></i></a>
       </li> -->
