--- a/css/styles.scss
+++ b/css/styles.scss
@@ -417,6 +417,9 @@ padding: 20px;
 }
 .dashCard {
   background-color: white;
+  display: flex;
+  flex: 1 0 0%;
+  flex-direction: column;
 }
 .dashCardHeader {
   background-color: #f1f1f1;
@@ -427,6 +430,7 @@ padding: 20px;
 .dashCardBody {
   text-align: center;
   padding: 20px;
+  flex: 1 1 auto;
 }
 .navbar-dark .navbar-nav .nav-link.reportInNav {
   background-color: $brand-green;
@@ -590,4 +594,30 @@ span.mobMenuLabel {
   position: absolute;
   right: 60px;
   margin-top: 10px;
+}
+.checkContent {
+  text-align: left;
+}
+.checkContent .custom-control-label::before,.checkContent .custom-control-label::after {
+  height: 3rem;
+  width: 3rem;
+}
+.custom-control-input:checked~.custom-control-label::before,.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+  background-color: $brand-green;
+}
+.resultInner {
+  background-color: #F1F1F1;
+  border-radius: 2px;
+  padding: 10px;
+  margin-top: 10px;
+}
+.valError {
+  background-color: red;
+  color: white;
+  padding: 5px;
+  display: inline-block;
+  float: left;
+}
+.valError p.small {
+  margin-bottom: 0px;
 }
