--- a/_includes/homepageHeader.html
+++ b/_includes/homepageHeader.html
@@ -4,22 +4,22 @@
     <div class="row">
       <div class="col-xl-9 mx-auto animated slideInLeft">
         <h1 class="logo">myproperty<span>insights</span></h1>
-        <h2>Your property report awaits</h2>
       </div>
       <div class="col-md-6 col-lg-6 col-xl-6 mx-auto text-center">
-        <div class="card animated wow slideInRight" data-wow-delay="0.3s">
-          <div class="card-body z-depth-2">
+        <div class=" animated wow slideInRight" data-wow-delay="0.3s">
+          <div class="">
             <h3>Enter your post code to start your free valuation...</h3>
-            <div class="md-form input-group mb-3">
+            <div class="mb-3">
+              <div class="form-inline pcForm">
+                <div class="form-group mx-sm-3 mb-2">
               <input type="text" class="form-control" id="postCodeInput" aria-label="Enter Post Code"
-                aria-describedby="postCodeInput">
-                <label for="postCodeInput" class="">Post Code</label>
-              <div class="input-group-append">
-                <button class="btn btn-md btn-primary m-0 px-3" type="button" id="find-button">Search</button>
-              </div>
+                aria-describedby="postCodeInput" placeholder="Post Code">
+                <button class="btn btn-md btn-primary ml-1 px-3" type="button" id="find-button">Search</button>
+                </div>
               <div id="successStatus"></div>
               <div class="form-group mdb-select">
                 <div id="lookup_field"></div>
+              </div>
               </div>
             </div>
           </div>
