Ch ch ch changes

--- a/_includes/dashboard-sidebar.html
+++ b/_includes/dashboard-sidebar.html
@@ -8,6 +8,7 @@
       <p id="town"></p>
       <p id="postcode"></p>
       <a href="" class="emailVal waves-effect"><i class="fas fa-envelope"></i> Share Dashboard</a>
+      <p class="small mt-1">All prices are based on information gathered from the average sold prices in your area</p>
     </div>
     <ul class="nav md-tabs flex-column">
       <li class="nav-item">
