--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -9,7 +9,7 @@
             <div class="flipper">
               <div class="front">
                 <div id="viewwReportLoading">
-                  <p>Building your report</p>
+                  <p class="reportLoadingText">Analysing recent sold prices</p>
                   <div class="spinner">
                     <div class="bounce1"></div>
                     <div class="bounce2"></div>
